--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "husky": "^8.0.3",
     "prettier": "^2.8.4",
     "vitest": "^0.29.0"
+  },
+  "dependencies": {
+    "@google-cloud/bigquery": "^6.1.0"
   }
 }
